--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="My Resume">
+  <meta name="author" content="ljeff009">
 
-  <title>John Doe - Business Administration</title>
+  <title>Lennox Jeffries - Marketing</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Lennox Jeffries</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/firstnamelastname.jpeg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,42 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Lennox Jeffries
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Marketing📚</div>
+        <p class="lead mb-4">Growing up in Germany and being bilingual has had a significant impact on my life. Germany is a country that prides itself on its language and culture, and as a result, I had the opportunity to learn both German and English from a young age. Growing up, I was exposed to both languages through school, media, and interactions with friends and family members who spoke both languages.
 
-        Enter bio here<br><br>
+Being bilingual has given me a unique perspective on the world and has opened up many opportunities for me. It has allowed me to connect with people from different cultures and has made traveling and exploring new places easier. Moreover, it has helped me to better understand and appreciate the nuances of language and communication.
 
-        Enter bio here
+Additionally, growing up in Germany has instilled in me a strong sense of cultural identity and pride. I was able to participate in traditional German festivals and events, such as Oktoberfest, and learned about the country's history and traditions.
+
+Overall, growing up in Germany and being bilingual has enriched my life in many ways, and I am grateful for the experiences and opportunities it has provided me.<br><br>
+
+        I had the opportunity to gain experience in two different fields through internships in marketing and culinary arts. During my marketing internship, I was able to work alongside experienced professionals in a fast-paced environment. I was able to learn about branding, social media marketing, and customer engagement, and was able to apply this knowledge in various marketing campaigns. I also gained skills in data analysis and report writing, which allowed me to better understand consumer behavior and marketing trends.
+
+In my culinary internship, I was able to work in a high-end restaurant, learning from chefs who had years of experience. I learned about different cooking techniques, food presentation, and kitchen management. I was also able to gain experience in menu planning, recipe development, and ingredient selection. This internship allowed me to develop my passion for cooking, while also gaining valuable skills in a fast-paced, high-pressure environment.
+
+Overall, these internships provided me with invaluable experiences and skills, and have allowed me to develop a diverse set of skills that I can apply in various career paths.<br><br>
+
+        Working with a friend to create a business was an exciting and rewarding experience. We had a shared passion for fashion and decided to start an online store that sold clothing and accessories. We began by creating a brand name, logo, and website, and then started building our social media presence.
+
+Together, we created multiple social media pages for our brand, including Facebook, Instagram, and Twitter. We used these platforms to promote our products, engage with customers, and build our brand identity. We also worked to create a consistent brand voice across all of our platforms, with a focus on high-quality content and visually appealing images.
+
+In addition to our online store and social media pages, we also participated in pop-up shops and fashion events in our local area. This allowed us to connect with customers in person and build a stronger sense of community around our brand.
+
+Our hard work and dedication paid off, as we were able to grow our business and gain a loyal customer base. Working with my friend on this project was not only a great business opportunity but also a fun and memorable experience.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.hellofresh.com/pages/meal-kit-delivery?c=RO-PA56WMTCC&mealsize=4-2&dm=meals&dm_gifts=gifts&utm_source=google&utm_medium=cpc&utm_campaign=SEA_US_google_Act_2023_Brand_Core_16FMBAU_ABTest_Control&utm_content=act_seabrand_seabrand&vs_campaign_id=3e732696-0b2a-4513-bf13-a6d55c7ae404&addShippingOnTotal=true&gclid=Cj0KCQiAgOefBhDgARIsAMhqXA4LcSWj_qy98ACE89wWufFxcSzVs9mWPemhm8iWEAZdBJeht7KnYrAaAj_CEALw_wcB">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/lennoxlj">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.crunchyroll.com/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://www.netflix.com/browse">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +108,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Marketing Director</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">ABI Marketing</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Overseeing marketing departmen<br> 
+              • Evaluating project activities<br>
+              • Directing research efforts<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2017 - May 2017</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Head Chef</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Africa Queen</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Managing stock<br>
+              • Planning menus<br>
+              • Reporting to restaurant manager<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">May 2016 - June 2016</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Social Media Manager</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">CrochetWithReina</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Create website<br>
+            • Create and run social media pages<br>
+            • Organize sale opportunities<br>
+          
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2023 - Present</span>
           </div>
         </div>
 
@@ -152,33 +169,14 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Business Major</div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2022 - 2026</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
           </div>
         </div>
 
@@ -191,7 +189,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+           <img src="img/linktree.png" width="300px">
+           <img src="img/website.png" width="300px"><br>
+          <img src="img/zoom.png" width="300px">
+          <img src="img/injera.png" width="300px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +200,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Lennox Jeffries</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
